# SimpleChat

./: .gitignore  CMakeLists.txt  ClientMain.cpp  ClientMainDev.cpp  ServerMain.cpp  ServerMainDev.cpp
SRC/Client/: Client.cpp  Client.h
SRC/Networking/: PacketNet.h  StreamedNet.cpp  StreamedNet.h  StreamedNetImpl.h
SRC/Networking_New/: NetOWLock.h  NetTSQueue.h  StreamedNet.cpp  StreamedNet.h
SRC/Server/: Connection.cpp  Connection.h  Server.cpp  Server.h
SRC/ServerClient/: StreamedNet.cpp  StreamedNet.h  StreamedNetImpl.h
SRC/StreamedNet/: StreamedNet.cpp  StreamedNet.h  StreamedNetImpl.h
SRC/Util/: AsioInclude.h  StringUtil.h  mrw.h
